# pcl_registration_visualizer

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: visualization_user_config.yaml
include/pcl_registration_visualizer/: pointcloud_matching_visualizer.hpp
launch/: icp_registration.launch  ransac_icp_registration.launch
pcd/: pcl_src.pcd  pcl_tgt.pcd
src/: pointcloud_matching_visualizer.cpp
src/example/: icp_registration_pcl.cpp  ransac_icp_registration_pcl.cpp
